k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: taskmanager
  labels:
    project: kiii-project
    app: taskmanager
    managed-by: stefan
