k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskmanager
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
    spec:
      containers:
        - name: backend
          image: petrovski1812/taskmanager-backend:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: backend-config-volume
              mountPath: /etc/backend-config
              readOnly: true
            - name: backend-secret-volume
              mountPath: /etc/backend-secret
              readOnly: true
      volumes:
        - name: backend-config-volume
          configMap:
            name: backend-config
        - name: backend-secret-volume
          secret:
            secretName: backend-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: taskmanager
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
    spec:
      containers:
        - name: frontend
          image: petrovski1812/taskmanager-frontend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: frontend-config-volume
              mountPath: /usr/share/nginx/html/config/config.js
              subPath: config.js
              readOnly: true
      volumes:
        - name: frontend-config-volume
          configMap:
            name: frontend-config
