k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: taskmanager
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: taskmanager
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
